# Transpect

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-frida.txt  requirements.txt  start-trace.cmd  start-trace.sh
app/: __init__.py
app/agent_defense/: __init__.py  (+6 more)
config/: README.md  agent-defense-policy.json  otel-collector.template.yaml
dashboard/: __init__.py
docs/: Transpect-项目方案文档.md  agent-trace-backbone-v1.md  architecture.md  cross-step-defense-analysis.md  directory-layout.md  frida-agent-capability-report.md  frida-agent-demo-script.md  frida.md  frida_runtime_trace.md  gateway-events-jsonl-reference.md  observability.md  openclaw-frida-runtime-poc.md  product-showcase-guide.md  runtime-storage-plan.md  staged-attack-defense-demo.md  task-repo-adapters.md  trace-first-agent-safety-architecture.md
frida/: openclaw_gateway_windows.js
guardrail/: __init__.py
monitor/: __init__.py
scripts/: capture_frida.py  check_repo.py  clean_runtime.py  doctor.py  export_codetracer_bundle.py  run_acceptance.py  run_codetracer_diagnosis.py  run_frida_trace.py  segment_behavior_events.py  serve_viewer.py  setup_runtime.py  start_openclaw_frida_chat.py  start_trace.py  test_codetracer_export.py  test_trace_pipeline.py  trace_common.py  trace_topology.py  verify_openclaw_frida.py
task_repos/: manifest.schema.json
tests/: test_agent_defense_chain.py  test_codetracer_merged_export.py  test_trace_merge_final_judge.py
tools/: capture_frida.py  clean_runtime.py  run_frida_trace.py
viewer/: app.css  app.js  index.html  shared.js
(+594 files in other folders)
