[project]
name = "transpect"
version = "0.1.0"
description = "Agent runtime monitoring, guardrails, and dashboard tooling."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
frida = [
  "frida>=16.0.0",
  "frida-tools>=13.0.0",
]

[tool.uv]
package = false
